@@ -199,6 +199,12 @@ void Ramp::SetDefaults(bool fromMouseClick)
 		m_d.m_IsVisible = iTmp == 0 ? false : true;
 	else
 		m_d.m_IsVisible = fTrue;
+
+	hr = GetRegInt("DefaultProps\\Ramp","Modify3DStereo", &iTmp);
+	if ((hr == S_OK) && fromMouseClick)
+		m_d.m_fModify3DStereo = iTmp == 0 ? false : true;
+	else
+		m_d.m_fModify3DStereo = fTrue;
 	}
 
 void Ramp::WriteRegDefaults()
@@ -237,6 +243,7 @@ void Ramp::WriteRegDefaults()
 	SetRegValue("DefaultProps\\Ramp","Scatter", REG_SZ, &strTmp,strlen(strTmp));	
 	SetRegValue("DefaultProps\\Ramp","Collidable",REG_DWORD,&m_d.m_fCollidable,4);
 	SetRegValue("DefaultProps\\Ramp","Visible",REG_DWORD,&m_d.m_IsVisible,4);
+	SetRegValue("DefaultProps\\Ramp","Modify3DStereo",REG_DWORD,&m_d.m_fModify3DStereo,4);
 	}
 
 
@@ -1335,7 +1342,7 @@ void Ramp::RenderStatic(const RenderDevice* _pd3dDevice)
          }
 
          pd3dDevice->SetRenderState(RenderDevice::COLORKEYENABLE, TRUE);
-         pd3dDevice->SetRenderState(RenderDevice::ZWRITEENABLE, TRUE);
+         pd3dDevice->SetRenderState(RenderDevice::ZWRITEENABLE, m_d.m_fModify3DStereo); // do not update z if just a fake ramp (f.e. flasher fakes, etc)
 
          // Check if this is an acrylic.
          if  (m_d.m_fAcrylic)
@@ -1697,6 +1704,7 @@ HRESULT Ramp::SaveData(IStream *pstm, HCRYPTHASH hcrypthash, HCRYPTKEY hcryptkey
 	bw.WriteFloat(FID(RSCT), m_d.m_scatter);
 	bw.WriteBool(FID(CLDRP), m_d.m_fCollidable);
 	bw.WriteBool(FID(RVIS), m_d.m_IsVisible);	
+	bw.WriteBool(FID(MSTE), m_d.m_fModify3DStereo);
 
 	ISelect::SaveData(pstm, hcrypthash, hcryptkey);
 
@@ -1845,6 +1853,10 @@ BOOL Ramp::LoadToken(int id, BiffReader *pbr)
 	else if (id == FID(RVIS))
 		{
 		pbr->GetBool(&m_d.m_IsVisible);///////////////////////////
+		}
+	else if (id == FID(MSTE))
+		{
+		pbr->GetBool(&m_d.m_fModify3DStereo);
 		}
 	else
 		{
@@ -2463,6 +2475,22 @@ STDMETHODIMP Ramp::put_IsVisible(VARIANT_BOOL newVal)
 	return S_OK;
 }
 
+STDMETHODIMP Ramp::get_Modify3DStereo(VARIANT_BOOL *pVal)
+{
+	*pVal = (VARIANT_BOOL)FTOVB(m_d.m_fModify3DStereo);
+
+	return S_OK;
+}
+
+STDMETHODIMP Ramp::put_Modify3DStereo(VARIANT_BOOL newVal)
+{
+	STARTUNDO
+	m_d.m_fModify3DStereo = VBTOF(newVal);
+	STOPUNDO
+
+	return S_OK;
+}
+
 // Always called each frame to render over everything else (along with primitives)
 // Same code as RenderStatic (with the exception of the alpha tests).
 // Also has less drawing calls by bundling seperate calls.
@@ -2518,7 +2546,7 @@ void Ramp::PostRenderStatic(const RenderDevice* _pd3dDevice)
          pd3dDevice->SetRenderState(RenderDevice::DESTBLEND,  D3DBLEND_INVSRCALPHA); 
 
          pd3dDevice->SetRenderState(RenderDevice::COLORKEYENABLE, TRUE);
-         pd3dDevice->SetRenderState(RenderDevice::ZWRITEENABLE, TRUE);
+		 pd3dDevice->SetRenderState(RenderDevice::ZWRITEENABLE, m_d.m_fModify3DStereo); // do not update z if just a fake ramp (f.e. flasher fakes, etc)
 
 			g_pplayer->m_pin3d.SetTextureFilter ( ePictureTexture, TEXTURE_MODE_TRILINEAR );
 
